Change to new standard of using using ["sfm","random"] -> using sfm,random Update Values Update AST Add function to Main.kt Function for create/run project Add autorun file function to Main.kt More changes...